# monit-intel

./: .copilot-instructions.md  .gitignore  README.md  ingest.py  main.py  monit-intel  monit-intel-agent.service  monit-intel-ingest.service  monit-intel-ingest.timer  mother-cli.py  pixi.toml  pyproject.toml  run-agent.sh
.github/instructions/: plan.md
agent/: api.py  graph.py  mother.py  nodes.py  state.py
config/systemd/: install-services.sh  monit-intel-agent.service  monit-intel-ingest.service
docs/: ARCHITECTURE.md  SECURITY.md  STRUCTURE.md  USERNAME_TRACKING.md
scripts/: TEST_REPORT.py  check_service_history.py  debug_mother_logs.py  run-agent.sh  run-ingest.sh  test_restart_query.py  test_service_logs.sh
src/monit_intel/: __init__.py  __main__.py  chat_auth.py  hello_mother.py  ingest.py  main.py
src/monit_intel/agent/: __init__.py  actions.py  api.py  graph.py  mother.py  nodes.py
src/monit_intel/agent/static/: chat.html
src/monit_intel/tools/: log_reader.py
tests/: test_agent.py  test_all_services_logs.sh  test_auth.py  test_cpu.py  test_greeting_fix.py  test_integration_username.py  test_rest_auth.py  test_username_tracking.py
tools/: __init__.py  log_reader.py
