# This file is METADATA ONLY
# All dependencies and environment configuration are managed by pixi.toml
# Do NOT add dependencies here - use pixi.toml exclusively

[project]
name = "monit-intel"
version = "0.1.0"
description = "Proactive system monitoring with LLM-powered analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Monit-Intel Team"}
]
keywords = ["monitoring", "system", "llm", "agent", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
